ml_ops/40/k8s/destination_rule.yml
# Istio
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: proxy-server
spec:
  host: proxy-server
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:                            # デプロイメント定義ファイルの `spec.template.metadata.labels.version` タグで定義した値を設定
    - name: proxy-pod-subset1
      labels:
        version: proxy-pod-version1
    - name: proxy-pod-subset2
      labels:
        version: proxy-pod-version2
