ml_ops/40/k8s/virtual_service.yml
# Istio
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fast-api-server
spec:
  hosts:
    - fast-api-server
  http:
    - route:
        - destination:
            host: fast-api-server
            subset: svc
          weight: 100
